# codebegen_be

./: .gitignore  ACTUAL_ITERATION_BEHAVIOR_ANALYSIS.md  AUTO_PROJECT_CREATION_README.md  BUGFIX_AI_ORCHESTRATOR_NONE_RETURN.md  BUGFIX_ITERATION_DB_SAVE.md  BUGFIX_JSON_PARSING.md  BUGFIX_METHOD_SIGNATURES.md  CLOUD_STORAGE_INTEGRATION_COMPLETE.md  COMPLETE_FIX_SUMMARY_2025_10_16.md  COMPLETE_SSE_IMPLEMENTATION_ALL_MODES.md  COMPREHENSIVE_FIX_COMPLETE.md  CONFIGURABLE_QWEN_IMPLEMENTATION_SUMMARY.md  CRITICAL_BUG_FIXES_2025_10_16.md  Dockerfile  ERROR_ANALYSIS_2025_10_16.md  EXACT_CHANGES.md  EXPECTED_ITERATION_BEHAVIOR_COMPLETE.md  FIXES_VERIFICATION.md  FRONTEND_API_MIGRATION_GUIDE.md  FRONTEND_AUTO_PROJECT_MIGRATION.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_SECURE_SSE_MIGRATION.md  FRONTEND_SSE_422_TOKEN_FIX.md  FRONTEND_SSE_INTEGRATION_GUIDE.md  GEMINI_IMPLEMENTATION_SUMMARY.md  GEMINI_INTEGRATION_COMPLETE.md  GEMINI_INTEGRATION_PROGRESS.md  GENERATION_VALIDATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INCREMENTAL_FILE_SAVING.md  ITERATION_BEHAVIOR_ANALYSIS.md  ITERATION_BEHAVIOR_SUMMARY.md  ITERATION_BUG_FIX_ACTION_PLAN.md  ITERATION_FIX_COMPLETE.md  ITERATION_FIX_PLAN.md  ITERATION_SSE_IMPLEMENTATION_STATUS.md  ITERATION_SYSTEM_REDESIGN.md  ITERATION_TESTING_GUIDE.md  LOG_ANALYSIS_2025_10_16.md  (+66 more)
.github/: ISSUE_SUPABASE_STORAGE_INTEGRATION.md
ai_models/: __init__.py  gemini_generator.py  llama_parser.py  mistral_docs.py  model_loader.py  qwen_generator.py  starcoder_reviewer.py
alembic/: env.py
app/: main.py
docs/: AUTO_PROJECT_CREATION_GUIDE.md  AUTO_PROJECT_CREATION_SUMMARY.md  GEMINI_INTEGRATION.md  GEMINI_QUICKSTART.md  GENERATION_API_SUMMARY.md  LLM_PROVIDERS.md  STORAGE_SETUP.md  STORAGE_TESTING.md  SUPABASE_RLS_WITH_JWT_AUTH.md  (+7 more)
(+154 files in other folders)
